welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:10: error: Boolean does not take parameters
	else (a==b ||  a==c || b==c ){ 
                                     ^